added rating comparions

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -19879,11 +19879,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "orientation = 'index'"
+    "orientation = 'records'"
    ]
   },
   {
@@ -19904,31 +19904,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Too short     269\n",
-       "Just right    202\n",
-       "Too long       14\n",
-       "Name: length_dc, dtype: int64"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get value counts for each value in from df_uniq_id\n",
-    "date_length_survey = df_uniq_id['length_dc'].value_counts()\n",
-    "date_length_survey\n",
-    "\n",
-    "date_length_survey.to_json('./date_length_survey.json', orient=orientation)\n",
-    "\n",
-    "date_length_survey"
+    "date_length_survey = df_uniq_id['length_dc'].value_counts().reset_index()\n",
+    "date_length_survey = date_length_survey.rename(\n",
+    "    columns={'index': 'response', 'length_dc': 'amount'})\n",
+    "date_length_survey.to_json('./date_length_survey.json', orient=orientation)"
    ]
   },
   {
@@ -19952,18 +19936,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "# count values in numdat_2 and group by wave size\n",
-    "num_dates_survey_small_wave = df_uniq_id[df_uniq_id['wave_size'] == 'small']['numdat_dc'].value_counts()\n",
+    "num_dates_survey_small_wave = df_uniq_id[df_uniq_id['wave_size'] == 'small']['numdat_dc'].value_counts().reset_index()\n",
+    "num_dates_survey_small_wave = num_dates_survey_small_wave.rename(\n",
+    "    columns={'index':'response', 'numdat_dc':'amount'})\n",
     "num_dates_survey_small_wave.to_json('./num_dates_survey_small_wave.json', orient=orientation)\n",
     "\n",
-    "num_dates_survey_medium_wave = df_uniq_id[df_uniq_id['wave_size'] == 'medium']['numdat_dc'].value_counts()\n",
+    "num_dates_survey_medium_wave = df_uniq_id[df_uniq_id['wave_size'] == 'medium']['numdat_dc'].value_counts().reset_index()\n",
+    "num_dates_survey_medium_wave = num_dates_survey_medium_wave.rename(\n",
+    "    columns={'index':'response', 'numdat_dc':'amount'})\n",
     "num_dates_survey_medium_wave.to_json('./num_dates_survey_medium_wave.json', orient=orientation)\n",
     "\n",
-    "num_dates_survey_large_wave = df_uniq_id[df_uniq_id['wave_size'] == 'large']['numdat_dc'].value_counts()\n",
+    "num_dates_survey_large_wave = df_uniq_id[df_uniq_id['wave_size'] == 'large']['numdat_dc'].value_counts().reset_index()\n",
+    "num_dates_survey_large_wave = num_dates_survey_large_wave.rename(\n",
+    "    columns={'index':'response', 'numdat_dc':'amount'})\n",
     "num_dates_survey_large_wave.to_json('./num_dates_survey_large_wave.json', orient=orientation)"
    ]
   },
@@ -19977,12 +19967,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get a sorted list of mean match_receive_rate by career\n",
-    "career_match_success = pd.Series(df_uniq_id.groupby('career_name')['match_receive_rate'].mean().sort_values(ascending=False))\n",
+    "career_match_success = pd.Series(df_uniq_id.groupby('career_name')['match_receive_rate'].mean().sort_values(ascending=False)).reset_index()\n",
+    "career_match_success = career_match_success.rename(\n",
+    "    columns={'index':'career', 'match_receive_rate':'like_receive_rate'})\n",
     "career_match_success.to_json('./career_match_success.json', orient=orientation)"
    ]
   },
@@ -19995,15 +19987,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[{\"status\":\"Familiar\",\"like_receive_rate\":0.4502342165},{\"status\":\"Strangers\",\"like_receive_rate\":0.4247200491}]'"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get mean 'match_receive_rate' by response to 'met_o'\n",
-    "met_before_gender_match_success = df_uniq_id.groupby(['gender_name', 'met_o'])['match_receive_rate'].mean().sort_values(ascending=False)\n",
+    "met_before_gender_match_success = df_uniq_id.groupby(['gender_name', 'met_o'])['match_receive_rate'].mean().sort_values(ascending=False).reset_index()\n",
+    "met_before_gender_match_success = met_before_gender_match_success.rename(\n",
+    "    columns={'gender_name':'gender', 'met_o':'status', 'match_receive_rate':'like_receive_rate'})\n",
     "met_before_gender_match_success.to_json('./met_before_gender_match_success.json', orient=orientation)\n",
     "\n",
-    "met_before_match_success = df_uniq_id.groupby(['met_o'])['match_receive_rate'].mean().sort_values(ascending=False)\n",
+    "met_before_match_success = df_uniq_id.groupby(['met_o'])['match_receive_rate'].mean().sort_values(ascending=False).reset_index()\n",
+    "met_before_match_success = met_before_match_success.rename(\n",
+    "    columns={'met_o':'status', 'match_receive_rate':'like_receive_rate'})\n",
     "met_before_match_success.to_json('./met_before_match_success.json', orient=orientation)"
    ]
   },
@@ -20016,21 +20023,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[{\"age_group\":\"24 to 28\",\"like_receive_rate\":0.4415883239},{\"age_group\":\"23 and under\",\"like_receive_rate\":0.4350814974},{\"age_group\":\"29 and over\",\"like_receive_rate\":0.3793032426}]'"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get a sorted list of mean match_receive_rate by age\n",
-    "age_gender_match_success = df_uniq_id.groupby(['gender_name', 'age'])['match_receive_rate'].mean().sort_values(ascending=False)\n",
+    "age_gender_match_success = df_uniq_id.groupby(['gender_name', 'age'])['match_receive_rate'].mean().sort_values(ascending=False).reset_index()\n",
+    "age_gender_match_success = age_gender_match_success.rename(\n",
+    "    columns={'gender_name':'gender', 'age':'age', 'match_receive_rate':'like_receive_rate'})\n",
     "age_gender_match_success.to_json('./age_gender_match_success.json', orient=orientation)\n",
     "\n",
-    "age_match_success = df_uniq_id.groupby(['age'])['match_receive_rate'].mean().sort_values(ascending=False)\n",
+    "age_match_success = df_uniq_id.groupby(['age'])['match_receive_rate'].mean().sort_values(ascending=False).reset_index()\n",
+    "age_match_success = age_match_success.rename(\n",
+    "    columns={'age':'age', 'match_receive_rate':'like_receive_rate'})\n",
     "age_match_success.to_json('./age_match_success.json', orient=orientation)\n",
     "\n",
-    "age_group_gender_match_success = df_uniq_id.groupby(['gender_name', 'age_group'])['match_receive_rate'].mean().sort_values(ascending=False)\n",
+    "age_group_gender_match_success = df_uniq_id.groupby(['gender_name', 'age_group'])['match_receive_rate'].mean().sort_values(ascending=False).reset_index()\n",
+    "age_group_gender_match_success = age_group_gender_match_success.rename(\n",
+    "    columns={'gender_name':'gender', 'match_receive_rate':'like_receive_rate'})\n",
     "age_group_gender_match_success.to_json('./age_group_gender_match_success.json', orient=orientation)\n",
     "\n",
-    "age_group_match_success = df_uniq_id.groupby(['age_group'])['match_receive_rate'].mean().sort_values(ascending=False)\n",
+    "age_group_match_success = df_uniq_id.groupby(['age_group'])['match_receive_rate'].mean().sort_values(ascending=False).reset_index()\n",
+    "age_group_match_success = age_group_match_success.rename(\n",
+    "    columns={'match_receive_rate':'like_receive_rate'})\n",
     "age_group_match_success.to_json('./age_group_match_success.json', orient=orientation)"
    ]
   },
@@ -20043,13 +20069,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[{\"response\":\"Somewhat Satisfied\",\"amount\":208},{\"response\":\"Satisfied\",\"amount\":144},{\"response\":\"Somewhat Dissatisfied\",\"amount\":83},{\"response\":\"Dissatisfied\",\"amount\":31},{\"response\":\"Very Satisfied\",\"amount\":19}]'"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# count values in satisfaction\n",
-    "satisfaction_survey = df_uniq_id['satisfaction'].value_counts()\n",
-    "satisfaction_survey.to_json('./satisfaction_survey.json', orient=orientation)\n"
+    "satisfaction_survey = df_uniq_id['satisfaction'].value_counts().reset_index()\n",
+    "satisfaction_survey = satisfaction_survey.rename(\n",
+    "    columns={'index': 'response', 'satisfaction': 'amount'})\n",
+    "satisfaction_survey.to_json('./satisfaction_survey.json', orient=orientation)"
    ]
   },
   {
@@ -20068,13 +20107,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get mean hobby ratings and sort\n",
-    "hobby_ratings = df_uniq_id.loc[:,'sports':'yoga'].mean().sort_values(ascending=False)\n",
-    "hobby_ratings.to_json('./hobby_ratings.json', orient=orientation)\n"
+    "hobby_ratings = df_uniq_id.loc[:,'sports':'yoga'].mean().sort_values(ascending=False).reset_index()\n",
+    "hobby_ratings = hobby_ratings.rename(\n",
+    "    columns={'index': 'hobby', 0: 'avg_rating'})\n",
+    "hobby_ratings.to_json('./hobby_ratings.json', orient=orientation)"
    ]
   },
   {
@@ -20086,15 +20127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "age_counts = df_uniq_id['age'].value_counts()\n",
+    "age_counts = df_uniq_id['age'].value_counts().reset_index()\n",
+    "age_counts = age_counts.rename(\n",
+    "    columns={'index': 'age', 'age': 'amount'})\n",
     "age_counts.to_json('./age_counts.json', orient=orientation)\n",
     "\n",
     "\n",
-    "age_group_counts = df_uniq_id['age_group'].value_counts()\n",
+    "age_group_counts = df_uniq_id['age_group'].value_counts().reset_index()\n",
+    "age_group_counts = age_group_counts.rename(\n",
+    "    columns={'index': 'age_group', 'age_group': 'amount'})\n",
     "age_group_counts.to_json('./age_group_counts.json', orient=orientation)\n"
    ]
   },
@@ -20107,12 +20152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "# count values in goal_dc\n",
-    "goals_survey = df_uniq_id['goal_dc'].value_counts()\n",
+    "goals_survey = df_uniq_id['goal_dc'].value_counts().reset_index()\n",
+    "goals_survey = goals_survey.rename(\n",
+    "    columns={'index': 'goal', 'goal_dc': 'amount'})\n",
     "goals_survey.to_json('./goals_survey.json', orient=orientation)"
    ]
   },
@@ -20126,7 +20173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20134,8 +20181,10 @@
     "match_to_date_funnel = pd.Series({'Likes': df_uniq_id['matches_given'].mean(),\n",
     "                                     'Matches': df_uniq_id['mutual_count'].mean(),\n",
     "                                     'Contact made': df_uniq_id['contacted'].mean(),\n",
-    "                                     'Had a date': df_uniq_id['date_3'].fillna(0).mean()})\n",
+    "                                     'Had a date': df_uniq_id['date_3'].fillna(0).mean()}).reset_index()\n",
     "\n",
+    "match_to_date_funnel = match_to_date_funnel.rename(\n",
+    "    columns={'index': 'stage', 0: 'avg_per_participant'})\n",
     "match_to_date_funnel.to_json('./match_to_date_funnel.json', orient=orientation)"
    ]
   },
@@ -20162,13 +20211,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get mean of each attributes preference\n",
     "trait_importance = df[pref_alloc].mean()\n",
-    "trait_importance = trait_importance.set_axis(['Attractiveness', 'Sincerity', 'Intelligence', 'Fun', 'Ambition', 'Shared Interests'])\n",
+    "trait_importance = trait_importance.set_axis(['Attractiveness', 'Sincerity', 'Intelligence', 'Fun', 'Ambition', 'Shared Interests']).reset_index()\n",
+    "trait_importance = trait_importance.rename(\n",
+    "    columns={'index': 'trait', 0: 'score'})\n",
     "trait_importance.to_json('./trait_importance.json', orient=orientation)"
    ]
   },
